# This Makefile is used to install headers into $(includedir).
# See: http://www.gnu.org/software/automake/manual/automake.html#Headers

nobase_include_HEADERS = libcds2/array.h \
			 libcds2/cdsexception.h \
			 libcds2/dynamic/memorymanager.h \
			 libcds2/immutable/bitsequence.h \
			 libcds2/immutable/bitsequenceonelevelrank.h \
			 libcds2/immutable/bitsequenceseq.h \
			 libcds2/immutable/coder.h \
			 libcds2/immutable/codernone.h \
			 libcds2/immutable/mapper.h \
			 libcds2/immutable/mappernone.h \
			 libcds2/immutable/permutation.h \
			 libcds2/immutable/permutationmrrr.h \
			 libcds2/immutable/sequence.h \
			 libcds2/immutable/tree.h \
			 libcds2/immutable/treelouds.h \
			 libcds2/immutable/wavelettree.h \
			 libcds2/immutable/wavelettreenoptrs.h \
			 libcds2/io.h \
			 libcds2/libcds.h \
			 libcds2/time.h
