# This Makefile is used to install headers into $(includedir).
# See: http://www.gnu.org/software/automake/manual/automake.html#Headers

nobase_include_HEADERS = \
    libcds@CDS_API_VERSION@/array.h \
    libcds@CDS_API_VERSION@/cdsexception.h \
    libcds@CDS_API_VERSION@/dynamic/memorymanager.h \
    libcds@CDS_API_VERSION@/immutable/bitsequence.h \
    libcds@CDS_API_VERSION@/immutable/bitsequenceonelevelrank.h \
    libcds@CDS_API_VERSION@/immutable/bitsequenceseq.h \
    libcds@CDS_API_VERSION@/immutable/coder.h \
    libcds@CDS_API_VERSION@/immutable/codernone.h \
    libcds@CDS_API_VERSION@/immutable/mapper.h \
    libcds@CDS_API_VERSION@/immutable/mappernone.h \
    libcds@CDS_API_VERSION@/immutable/permutation.h \
    libcds@CDS_API_VERSION@/immutable/permutationmrrr.h \
    libcds@CDS_API_VERSION@/immutable/sequence.h \
    libcds@CDS_API_VERSION@/immutable/tree.h \
    libcds@CDS_API_VERSION@/immutable/treelouds.h \
    libcds@CDS_API_VERSION@/immutable/wavelettree.h \
    libcds@CDS_API_VERSION@/immutable/wavelettreenoptrs.h \
    libcds@CDS_API_VERSION@/io.h \
    libcds@CDS_API_VERSION@/libcds.h \
    libcds@CDS_API_VERSION@/time.h
