
CPP=g++
AM_CPPFLAGS = -I../include/
TEST_INC=

lib_LTLIBRARIES = libcds.la
libcds_la_LDFLAGS = -static -version-info 2:0:0
libcds_la_SOURCES = ../src/basic/array.cpp \
		    ../src/basic/io.cpp \
		    ../src/immutable/bitsequence.cpp \
		    ../src/immutable/bitsequenceseq.cpp \
		    ../src/immutable/bitsequenceonelevelrank.cpp \
		    ../src/immutable/sequence.cpp \
		    ../src/immutable/mapper.cpp \
		    ../src/immutable/mappernone.cpp \
		    ../src/immutable/coder.cpp \
		    ../src/immutable/codernone.cpp \
		    ../src/immutable/permutation.cpp \
		    ../src/immutable/permutationmrrr.cpp \
		    ../src/immutable/treelouds.cpp \
		    ../src/immutable/wavelettreenoptrs.cpp \
		    ../src/immutable/tree.cpp
